--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -190,7 +190,7 @@
                 <div class="btn-box">
                     {% if app.user %}
                         <a href="{{ path('dashboard') }}" class="theme-btn btn-style-seven">Dashboard</a>
-                        <a href="{{ path('app_logout') }}" class="theme-btn btn-style-four">Logout</a>
+                        <a href="{{ path('app_logout') }}" class="theme-btn btn-style-eight">Logout</a>
                     {% else %}
                         <a href="{{ path('app_login') }}" class="theme-btn btn-style-four">Login / Register</a>
                     {% endif %}
